--- a/notebooks/Viz.ipynb
+++ b/notebooks/Viz.ipynb
@@ -11,6 +11,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as plticker"
+    "%matplotlib notebook"
    ]
   },
   {
