--- a/notebooks/Viz.ipynb
+++ b/notebooks/Viz.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "%matplotlib widget\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as plticker\n",
-    "import types"
+    "import matplotlib.ticker as plticker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8015ed88730c4f73ab033d18b63c830f",
+       "model_id": "0c2e9fd71f3f4dacbdebfd79c7c333ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,7 +60,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbf3b92795aa4516a90fc9bd78aae5ac",
+       "model_id": "c1c1d345ed364535be33e5d4c47f970c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
        "  Text(0, 3.5, 'Shoe Size')])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9026a14f8e4456f8a40677bd5a4b28f",
+       "model_id": "98eb210779b94a0eaf92bf4fc94f0447",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,7 +214,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3232b96293f4b3aa40cabab3416b01a",
+       "model_id": "9019870545b14128b9c194c1ac13c287",
        "version_major": 2,
        "version_minor": 0
       },
@@ -273,7 +273,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b55f476fd574c4c860af562c9c20c5c",
+       "model_id": "7842efdbe52e42129f066460ff59f279",
        "version_major": 2,
        "version_minor": 0
       },
