--- a/notebooks/Viz.ipynb
+++ b/notebooks/Viz.ipynb
@@ -7,14 +7,11 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import ipywidgets as widgets\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as plticker\n",
-    "import matplotlib.widgets as wid\n",
-    "from sklearn.metrics import silhouette_samples, silhouette_score"
+    "import matplotlib.ticker as plticker"
    ]
   },
   {
@@ -48,7 +45,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4638f7c15e71420eb516ed3b5f38c627",
+       "model_id": "0fe9b3415b7c4069946485071e398e91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +59,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce128441b99649138b855d55890a7be6",
+       "model_id": "f78be3531bb241318a2dfed566c8600b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,6 +69,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.5, 1.5, 2.5, 3.5]),\n",
+       " [Text(0, 0.5, 'Brand'),\n",
+       "  Text(0, 1.5, 'Sale Price'),\n",
+       "  Text(0, 2.5, 'Retail Price'),\n",
+       "  Text(0, 3.5, 'Shoe Size')])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -85,32 +96,15 @@
     "fig, ax = plt.subplots(figsize=(6,6))\n",
     "correlations = df.corr()\n",
     "sns.heatmap(correlations, annot=True, ax=ax, cmap = 'mako')\n",
-    "plt.yticks(rotation = 0)\n",
-    "plt.show()"
+    "plt.yticks(rotation = 0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80639841162247a89595837ed26db2a7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%matplotlib widget\n",
     "sns.boxplot(x='Brand', y='Sale Price', data=df)\n",
     "plt.show()"
    ]
@@ -173,7 +167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca53cbbe0eee46999910634e2529e43b",
+       "model_id": "e3b9f9967e4f4468bb11a976f97ae410",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,31 +197,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "km = KMeans(n_clusters=4, random_state=42)\n",
-    "km.fit_predict(X)\n",
-    "score = silhouette_score(X, km.labels_, metric='euclidean')\n",
-    "print('Silhouetter Score: %.3f' % score)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_clusters=4\n",
-    "km = KMeans(n_clusters=4,init=\"k-means++\", random_state=42)\n",
-    "km.fit(X)\n",
-    "cluster_labels = km.predict(X)\n",
-    "\n",
-    "#Calculate the average of silhouette scores\n",
-    "silhouette_avg = silhouette_score(X,cluster_labels)\n",
-    "\n",
-    "#Calculate the silhouette score for each data\n",
-    "each_silhouette_score = silhouette_samples(X,cluster_labels,metric=\"euclidean\")"
+    "kmeans = KMeans(n_clusters = 3, init = 'k-means++', random_state = 42)\n",
+    "y_kmeans = kmeans.fit_predict(X)"
    ]
   },
   {
@@ -238,84 +214,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "777ec77fbf0349c585877d4a55aa4e00",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[<matplotlib.axis.XTick at 0x218dfeb1070>,\n",
-       " <matplotlib.axis.XTick at 0x218dfeb1040>,\n",
-       " <matplotlib.axis.XTick at 0x218dfeaac40>,\n",
-       " <matplotlib.axis.XTick at 0x218dfeec4c0>,\n",
-       " <matplotlib.axis.XTick at 0x218dfeec9d0>,\n",
-       " <matplotlib.axis.XTick at 0x218dfeecee0>,\n",
-       " <matplotlib.axis.XTick at 0x218dfef2430>]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "colorlist =[\"tomato\",\"antiquewhite\",\"blueviolet\",\"cornflowerblue\",\"darkgreen\",\"seashell\",\"skyblue\",\"mediumseagreen\"]\n",
-    "fig =plt.figure()\n",
-    "ax = fig.add_subplot(1,1,1)\n",
-    "y_lower =10\n",
-    "for i in range(n_clusters):\n",
-    "    ith_cluster_silhouette_values = each_silhouette_score[cluster_labels == i]\n",
-    "    ith_cluster_silhouette_values.sort()\n",
-    "    size_cluster_i = ith_cluster_silhouette_values.shape[0]\n",
-    "    y_upper = y_lower + size_cluster_i\n",
-    "    \n",
-    "    color = colorlist[i]\n",
-    "    ax.fill_betweenx(np.arange(y_lower,y_upper),0,ith_cluster_silhouette_values,facecolor=color,edgecolor=color,alpha=0.3)\n",
-    "    \n",
-    "    #label the silhouse plots with their cluster numbers at the middle\n",
-    "    ax.text(-0.05,y_lower + 0.5 * size_cluster_i,str(i))\n",
-    "    \n",
-    "    #compute the new y_lower for next plot\n",
-    "    y_lower = y_upper +10 \n",
-    "    \n",
-    "ax.set_title(\"Silhuoette plot\")\n",
-    "ax.set_xlabel(\"silhouette score\")\n",
-    "ax.set_ylabel(\"Clusters\")\n",
-    "    \n",
-    "#the vertical line for average silhouette score of all the values\n",
-    "ax.axvline(x=silhouette_avg,color=\"red\",linestyle=\"--\")\n",
-    "    \n",
-    "ax.set_yticks([])\n",
-    "ax.set_xticks([-0.2,0,0.2,0.4,0.6,0.8,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kmeans = KMeans(n_clusters = 4, init = 'k-means++', random_state = 42)\n",
-    "y_kmeans = kmeans.fit_predict(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f63f36a2f6a46dd89760b2bf7eb7c5d",
+       "model_id": "dbbb23f132c4428382a5353d9b30d12d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,8 +229,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\seaborn\\_decorators.py:36: FutureWarning: Pass the following variables as keyword args: x, y. From version 0.12, the only valid positional argument will be `data`, and passing other arguments without an explicit keyword will result in an error or misinterpretation.\n",
-      "  warnings.warn(\n",
       "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\seaborn\\_decorators.py:36: FutureWarning: Pass the following variables as keyword args: x, y. From version 0.12, the only valid positional argument will be `data`, and passing other arguments without an explicit keyword will result in an error or misinterpretation.\n",
       "  warnings.warn(\n",
       "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\seaborn\\_decorators.py:36: FutureWarning: Pass the following variables as keyword args: x, y. From version 0.12, the only valid positional argument will be `data`, and passing other arguments without an explicit keyword will result in an error or misinterpretation.\n",
@@ -353,7 +250,7 @@
     "sns.scatterplot(kmeans.cluster_centers_[:, 0], kmeans.cluster_centers_[:, 1], color = 'red', \n",
     "                label = 'Centroids',s=300,marker=',')\n",
     "plt.grid(False)\n",
-    "plt.title('Sale vs Retail Price')\n",
+    "plt.title('Retail vs Sale Price')\n",
     "plt.xlabel('Sale ($)')\n",
     "plt.ylabel('Retail ($)')\n",
     "plt.legend()\n",
@@ -362,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +273,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d39e975fcce4ca69b2e8674d977cf64",
+       "model_id": "ca827afe63114f23b28e2c0b9f2b83b4",
        "version_major": 2,
        "version_minor": 0
       },
