--- a/notebooks/Viz.ipynb
+++ b/notebooks/Viz.ipynb
@@ -7,11 +7,14 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "import ipywidgets as widgets\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as plticker"
+    "import matplotlib.ticker as plticker\n",
+    "import matplotlib.widgets as wid\n",
+    "from sklearn.metrics import silhouette_samples, silhouette_score"
    ]
   },
   {
@@ -33,19 +36,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"Brand\"] = pd.Categorical(df[\"Brand\"])\n",
-    "df['Brand'] = df['Brand'].cat.codes"
+    "df = df.rename(columns={\n",
+    "    \"Order Date\": \"Order_Date\",\n",
+    "    \"Sneaker Name\": \"Sneaker_Name\",\n",
+    "    \"Sale Price\": \"Sale_Price\",\n",
+    "    \"Retail Price\": \"Retail_Price\",\n",
+    "    \"Release Date\": \"Release_Date\",\n",
+    "    \"Shoe Size\": \"Shoe_Size\",\n",
+    "    \"Buyer Region\": \"Buyer_Region\"\n",
+    "    })\n",
+    "\n",
+    "import datetime as dt\n",
+    "\n",
+    "df['Order_Date'] = pd.to_datetime(df['Order_Date'])\n",
+    "df['Order_Date']=df['Order_Date'].map(dt.datetime.toordinal)\n",
+    "\n",
+    "df['Release_Date'] = pd.to_datetime(df['Release_Date'])\n",
+    "df['Release_Date']=df['Release_Date'].map(dt.datetime.toordinal)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Brand\"] = pd.Categorical(df[\"Brand\"])\n",
+    "df[\"Brand\"] = df[\"Brand\"].cat.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fe9b3415b7c4069946485071e398e91",
+       "model_id": "9db1282507d94ff88bba97bfc5c48b53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -59,7 +87,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f78be3531bb241318a2dfed566c8600b",
+       "model_id": "087b5278fd93459a8b59670a6717bcf1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,20 +97,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([0.5, 1.5, 2.5, 3.5]),\n",
-       " [Text(0, 0.5, 'Brand'),\n",
-       "  Text(0, 1.5, 'Sale Price'),\n",
-       "  Text(0, 2.5, 'Retail Price'),\n",
-       "  Text(0, 3.5, 'Shoe Size')])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -96,22 +110,39 @@
     "fig, ax = plt.subplots(figsize=(6,6))\n",
     "correlations = df.corr()\n",
     "sns.heatmap(correlations, annot=True, ax=ax, cmap = 'mako')\n",
-    "plt.yticks(rotation = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.boxplot(x='Brand', y='Sale Price', data=df)\n",
+    "plt.yticks(rotation = 0)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4bd2cc6f762e47f5aefb77f9894a0d17",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%matplotlib widget\n",
+    "sns.boxplot(x='Brand', y='Sale_Price', data=df)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -126,22 +157,13 @@
    "source": [
     "#Average sale price by brand\n",
     "a = []\n",
-    "labels = df[['Brand', 'Sale Price']]\n",
+    "labels = df[['Brand', 'Sale_Price']]\n",
     "brands = ['Yeezy', 'Off-White']\n",
     "for b in brands:\n",
     "    row = labels.loc[labels['Brand'] == str(b)]\n",
-    "    a.append(row['Sale Price'].mean())\n",
+    "    a.append(row['Sale_Price'].mean())\n",
     "print('Yeezy avg price: $' + str(a[0]))\n",
     "print('Off-White avg price: $' + str(a[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = df.iloc[:, [3,6]].values"
    ]
   },
   {
@@ -150,7 +172,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "X = df.iloc[:, [3,6]].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "from sklearn.cluster import KMeans\n",
+    "from sklearn.cluster import MiniBatchKMeans\n",
     "wcss = []\n",
     "for i in range(1, 11):\n",
     "    kmeans = KMeans(n_clusters = i, init = 'k-means++', random_state = 42)\n",
@@ -165,9 +195,51 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import MiniBatchKMeans\n",
+    "wcss = []\n",
+    "for i in range(1, 11):\n",
+    "    kmeans = MiniBatchKMeans(n_clusters = i, init = 'k-means++', random_state = 42)\n",
+    "    kmeans.fit(X)\n",
+    "    # inertia method returns wcss for that model\n",
+    "    wcss.append(kmeans.inertia_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3b9f9967e4f4468bb11a976f97ae410",
+       "model_id": "9f17906f56c64dafb46649ebcd9ba21a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,13 +269,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "kmeans = KMeans(n_clusters = 3, init = 'k-means++', random_state = 42)\n",
-    "y_kmeans = kmeans.fit_predict(X)"
+    "km = KMeans(n_clusters=4, random_state=42)\n",
+    "km.fit_predict(X)\n",
+    "score = silhouette_score(X, km.labels_, metric='euclidean')\n",
+    "print('Silhouetter Score: %.3f' % score)"
    ]
   },
   {
@@ -212,9 +284,89 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_clusters=4\n",
+    "km = MiniBatchKMeans(n_clusters=4,init=\"k-means++\", random_state=42)\n",
+    "km.fit(X)\n",
+    "cluster_labels = km.predict(X)\n",
+    "\n",
+    "#Calculate the average of silhouette scores\n",
+    "silhouette_avg = silhouette_score(X,cluster_labels)\n",
+    "\n",
+    "#Calculate the silhouette score for each data\n",
+    "each_silhouette_score = silhouette_samples(X,cluster_labels,metric=\"euclidean\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "colorlist =[\"tomato\",\"antiquewhite\",\"blueviolet\",\"cornflowerblue\",\"darkgreen\",\"seashell\",\"skyblue\",\"mediumseagreen\"]\n",
+    "fig =plt.figure()\n",
+    "ax = fig.add_subplot(1,1,1)\n",
+    "y_lower =10\n",
+    "for i in range(n_clusters):\n",
+    "    ith_cluster_silhouette_values = each_silhouette_score[cluster_labels == i]\n",
+    "    ith_cluster_silhouette_values.sort()\n",
+    "    size_cluster_i = ith_cluster_silhouette_values.shape[0]\n",
+    "    y_upper = y_lower + size_cluster_i\n",
+    "    \n",
+    "    color = colorlist[i]\n",
+    "    ax.fill_betweenx(np.arange(y_lower,y_upper),0,ith_cluster_silhouette_values,facecolor=color,edgecolor=color,alpha=0.3)\n",
+    "    \n",
+    "    #label the silhouse plots with their cluster numbers at the middle\n",
+    "    ax.text(-0.05,y_lower + 0.5 * size_cluster_i,str(i))\n",
+    "    \n",
+    "    #compute the new y_lower for next plot\n",
+    "    y_lower = y_upper +10 \n",
+    "    \n",
+    "ax.set_title(\"Silhuoette plot\")\n",
+    "ax.set_xlabel(\"silhouette score\")\n",
+    "ax.set_ylabel(\"Clusters\")\n",
+    "    \n",
+    "#the vertical line for average silhouette score of all the values\n",
+    "ax.axvline(x=silhouette_avg,color=\"red\",linestyle=\"--\")\n",
+    "    \n",
+    "ax.set_yticks([])\n",
+    "ax.set_xticks([-0.2,0,0.2,0.4,0.6,0.8,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmeans = MiniBatchKMeans(n_clusters = 4, init = 'k-means++', random_state = 42)\n",
+    "y_kmeans = kmeans.fit_predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbbb23f132c4428382a5353d9b30d12d",
+       "model_id": "44b7c4994f674823b2eead1621b2ba0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,6 +381,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\seaborn\\_decorators.py:36: FutureWarning: Pass the following variables as keyword args: x, y. From version 0.12, the only valid positional argument will be `data`, and passing other arguments without an explicit keyword will result in an error or misinterpretation.\n",
+      "  warnings.warn(\n",
       "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\seaborn\\_decorators.py:36: FutureWarning: Pass the following variables as keyword args: x, y. From version 0.12, the only valid positional argument will be `data`, and passing other arguments without an explicit keyword will result in an error or misinterpretation.\n",
       "  warnings.warn(\n",
       "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\seaborn\\_decorators.py:36: FutureWarning: Pass the following variables as keyword args: x, y. From version 0.12, the only valid positional argument will be `data`, and passing other arguments without an explicit keyword will result in an error or misinterpretation.\n",
@@ -250,16 +404,16 @@
     "sns.scatterplot(kmeans.cluster_centers_[:, 0], kmeans.cluster_centers_[:, 1], color = 'red', \n",
     "                label = 'Centroids',s=300,marker=',')\n",
     "plt.grid(False)\n",
-    "plt.title('Retail vs Sale Price')\n",
+    "plt.title('Sale vs Shoe Size K-Means')\n",
     "plt.xlabel('Sale ($)')\n",
-    "plt.ylabel('Retail ($)')\n",
+    "plt.ylabel('Shoe Size')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +427,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca827afe63114f23b28e2c0b9f2b83b4",
+       "model_id": "8ec41814263d470ab2b4f3c819e50c2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -287,8 +441,9 @@
    ],
    "source": [
     "sns.set_style('whitegrid')\n",
-    "g=sns.lmplot('Sale Price','Shoe Size',data=df, hue='Brand',\n",
+    "g=sns.lmplot('Sale_Price','Shoe_Size',data=df, hue='Brand',\n",
     "           palette='coolwarm',height=6,aspect=1,fit_reg=False)\n",
+    "plt.title('Sale vs Retail Price Scatter Plot')\n",
     "legend = g._legend\n",
     "legend.set_title(\"Brand\")\n",
     "for t, l in zip(legend.texts,(\"Yeezy\", \"Off-White\")):\n",
