--- a/notebooks/Viz.ipynb
+++ b/notebooks/Viz.ipynb
@@ -73,7 +73,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9db1282507d94ff88bba97bfc5c48b53",
+       "model_id": "2b294d85bed14707ae8911acddeafad9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,7 +87,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "087b5278fd93459a8b59670a6717bcf1",
+       "model_id": "bed3dbb32c5e40d2ae7a6af2c40ffac6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bd2cc6f762e47f5aefb77f9894a0d17",
+       "model_id": "93b50e4d4994457e9273b5ddf80137ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -176,8 +176,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from sklearn.cluster import KMeans\n",
     "from sklearn.cluster import MiniBatchKMeans\n",
@@ -190,37 +192,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
    "source": [
     "from sklearn.cluster import MiniBatchKMeans\n",
     "wcss = []\n",
@@ -239,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f17906f56c64dafb46649ebcd9ba21a",
+       "model_id": "995e5618ad654ffb9e0e6e657e7b17e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -279,21 +252,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
    "source": [
-    "n_clusters=4\n",
+    "'''n_clusters=4\n",
     "km = MiniBatchKMeans(n_clusters=4,init=\"k-means++\", random_state=42)\n",
     "km.fit(X)\n",
     "cluster_labels = km.predict(X)\n",
@@ -302,7 +264,7 @@
     "silhouette_avg = silhouette_score(X,cluster_labels)\n",
     "\n",
     "#Calculate the silhouette score for each data\n",
-    "each_silhouette_score = silhouette_samples(X,cluster_labels,metric=\"euclidean\")"
+    "each_silhouette_score = silhouette_samples(X,cluster_labels,metric=\"euclidean\")''''''"
    ]
   },
   {
@@ -341,32 +303,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "kmeans = MiniBatchKMeans(n_clusters = 4, init = 'k-means++', random_state = 42)\n",
+    "kmeans = KMeans(n_clusters = 4, init = 'k-means++', random_state = 42)\n",
     "y_kmeans = kmeans.fit_predict(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44b7c4994f674823b2eead1621b2ba0d",
+       "model_id": "968536a689974cdba23f74f9b5c281d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -413,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +380,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ec41814263d470ab2b4f3c819e50c2d",
+       "model_id": "f818e8404bb74cb78056033e934202dd",
        "version_major": 2,
        "version_minor": 0
       },
