--- a/notebooks/Viz.ipynb
+++ b/notebooks/Viz.ipynb
@@ -74,7 +74,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "806feaf4cde04209bd4f582adc83f6ac",
+       "model_id": "a04e514c6f874a829df4c4f6045efd9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -88,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "041eec4e043f4c79b5b5b651d323102e",
+       "model_id": "712239edf9b0470e99c6caf168892b1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +138,34 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.cluster import KMeans\n",
     "from sklearn.cluster import MiniBatchKMeans\n",
@@ -158,7 +185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f315962992a34e0aa3faf512d0c5e7f9",
+       "model_id": "be07ce10482d43bdab554ece415eace3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +218,16 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "kmeans = MiniBatchKMeans(n_clusters = 3, init = 'k-means++', random_state = 42)\n",
     "y_kmeans = kmeans.fit_predict(X)"
@@ -205,7 +241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a90cfd6b48324b1f9e6f7b718d43757e",
+       "model_id": "368234b63a044891a090b5fbb3814ff6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -252,7 +288,16 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cameron.clark\\Anaconda3\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:887: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 1024 or by setting the environment variable OMP_NUM_THREADS=1\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "kmeans = MiniBatchKMeans(n_clusters = 4, init = 'k-means++', random_state = 42)\n",
     "y_kmeans = kmeans.fit_predict(X)"
@@ -266,7 +311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcb15046749644e99d138b3eda92e7f5",
+       "model_id": "1051eb89fb0643178b494aa361034886",
        "version_major": 2,
        "version_minor": 0
       },
@@ -304,7 +349,7 @@
     "sns.scatterplot(kmeans.cluster_centers_[:, 0], kmeans.cluster_centers_[:, 1], color = 'red', \n",
     "                label = 'Centroids',s=300,marker=',')\n",
     "plt.grid(False)\n",
-    "plt.title('Sale vs Shoe Size K-Means')\n",
+    "plt.title('Sale vs Shoe Size K-Means 4')\n",
     "plt.xlabel('Sale ($)')\n",
     "plt.ylabel('Shoe Size')\n",
     "plt.legend()\n",
@@ -327,7 +372,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fa73264425342ffb6c50de687efc4e7",
+       "model_id": "50928d8b44fb44b58c5b26dfcc7275c5",
        "version_major": 2,
        "version_minor": 0
       },
